--- a/requirements.txt
+++ b/requirements.txt
@@ -1,78 +1,9 @@
-acme==2.1.0
-apparmor==3.0.8
-blinker==1.5
-borgbackup==1.2.4
-cached-property==1.5.2
-certbot==2.1.0
-certbot-nginx==2.1.0
-certifi==2022.9.24
-chardet==5.1.0
-charset-normalizer==3.0.1
-click==8.1.3
-colorama==0.4.6
-ConfigArgParse==1.5.3
-configobj==5.0.8
-cryptography==38.0.4
-dbus-python==1.3.2
-distlib==0.3.6
-distro==1.8.0
-distro-info==1.5+deb12u1
-dnspython==2.3.0
-docker==5.0.3
-fail2ban==1.0.2
-filelock==3.9.0
-httplib2==0.20.4
-idna==3.3
-Jinja2==3.1.2
-jmespath==1.0.1
-josepy==1.13.0
-launchpadlib==1.11.0
-lazr.restfulclient==0.14.5
-lazr.uri==1.0.6
-LibAppArmor==3.0.8
-looseversion==1.0.2
-lxml==4.9.2
-markdown-it-py==2.1.0
-MarkupSafe==2.1.2
-mdurl==0.1.2
-msgpack==1.0.3
-natsort==8.0.2
-netifaces==0.11.0
-oauthlib==3.2.2
-packaging==23.0
-parsedatetime==2.6
-pipenv==2022.12.19
-platformdirs==2.6.0
-polib==1.1.1
-psutil==5.9.4
-py==1.11.0
-pyaml==21.10.1
-pycryptodomex==3.11.0
-pycurl==7.45.2
-Pygments==2.14.0
-PyGObject==3.42.2
-PyJWT==2.6.0
-pyOpenSSL==23.0.0
-pyparsing==3.0.9
-pyRFC3339==1.1
-python-apt==2.6.0
-python-dateutil==2.8.2
-python-gnupg==0.4.9
-pythondialog==3.5.1
-pytz==2022.7.1
-pyudev==0.24.0
-PyYAML==6.0
-pyzmq==24.0.1
-requests==2.28.1
-requests-toolbelt==0.10.1
-rich==13.3.1
-salt==3007.0
-six==1.16.0
-systemd-python==235
-unattended-upgrades==0.1
-Unidecode==1.3.6
-urllib3==1.26.12
-virtualenv==20.17.1+ds
-virtualenv-clone==0.3.0
-wadllib==1.3.6
-websocket-client==1.2.3
+fastapi>=0.68.0
+uvicorn>=0.15.0
+python-multipart>=0.0.5
+requests>=2.26.0
+torch>=2.0.0
+diffusers>=0.11.0
+googletrans>=4.0.0
+python-dotenv>=0.19.0
+PyYAML>=6.0
