--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,10 @@ python-multipart>=0.0.5
 requests>=2.26.0
 torch>=2.0.0
 diffusers>=0.11.0
+transformers>=4.49.0
+accelerate>=1.5.0
 googletrans>=4.0.0
 python-dotenv>=0.19.0
 PyYAML>=6.0
+protobuf>=6.30.0
+sentencepiece>=0.2.0
