--- a/config-docker.yaml
+++ b/config-docker.yaml
@@ -2,6 +2,7 @@ server:
   host: "0.0.0.0"
   port: 7999
   storage_root: "/app/storage"
+  api_key: cbebbe70-0ba4-494f-8c85-41da575228d9
 
 ollama:
   host: "host.docker.internal"
