--- a/config-docker.yaml
+++ b/config-docker.yaml
@@ -9,3 +9,31 @@ ollama:
   port: 11434
   timeout: 300  # seconds
   default_model: "qwq:32b-q8_0"
+
+openapi:
+  title: "LLM Server API"
+  version: "1.0.0"
+  summary: "Private LLM model management server"
+  description: |
+    # Key Information:
+    - Used exclusively for owner's personal purposes
+    - Testing and deployment of Language Learning Models (LLMs)
+    - Not intended for public use
+    - Access strictly limited to authorized users
+    # Technical Details:
+    - Integrated with Ollama for model operations
+    - Huggingface-hosted models support
+    - OpenAI API format compatible
+  contact:
+    name: "Nikolay Sedov"
+    url: "https://nicksedov.github.io/"
+  license_info:
+    name: "PRIVATE USE ONLY"
+  security_schemes:
+    Bearer:
+      type: "http"
+      scheme: "bearer"
+      bearerFormat: "UUID"
+      description: "Required format: Bearer <your-secret-key>"
+  security:
+    - Bearer: []
