--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-fastapi>=0.68.0
-uvicorn>=0.15.0
-python-multipart>=0.0.5
-requests>=2.26.0
+fastapi>=0.115.0
+uvicorn>=0.34.0
+python-multipart>=0.0.20
+requests>=2.32.0
 torch>=2.6.0
-diffusers>=0.11.0
-transformers>=4.49.0
+diffusers>=0.32.0
+transformers==4.47.1
 accelerate>=1.5.0
 googletrans>=4.0.0
 python-dotenv>=0.19.0
@@ -16,4 +16,4 @@ scikit-learn>=1.6.0
 pymorphy3>=2.0.0
 nltk>=3.9.0
 joblib>=1.4.0
-huggingface_hub>=0.19.0
+huggingface_hub>=0.27.0
