Migrate to cuda 12.8.1

--- a/config-default.yaml
+++ b/config-default.yaml
@@ -28,3 +28,11 @@ openapi:
       description: "Требуемый формат: Bearer <ваш-секретный-ключ>"
   security:
     - Bearer: []
+
+logging:
+  file_path: "logs/app.log"
+  level: "INFO"
+  format: "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
+  max_bytes: 10485760
+  backup_count: 5
+  enable_console: true
