--- a/config-docker.yaml
+++ b/config-docker.yaml
@@ -50,3 +50,11 @@ openapi:
       description: "Необходимый формат: Bearer <ваш-секретный-ключ>"
   security:
     - Bearer: []
+
+logging:
+  file_path: "/var/log/ai-server.log"
+  level: "INFO"
+  format: "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
+  max_bytes: 10485760
+  backup_count: 5
+  enable_console: true
