--- a/config-default.yaml
+++ b/config-default.yaml
@@ -25,7 +25,7 @@ openapi:
       type: "http"
       scheme: "bearer"
       bearerFormat: "UUID"
-      description: "Требуемый формат: Bearer <ваш-секретный-ключ>"
+      description: "Требуемый формат: UUID"
   security:
     - Bearer: []
 
