--- a/config-default.yaml
+++ b/config-default.yaml
@@ -6,7 +6,7 @@ server:
 ollama:
   host: "localhost"
   port: 11434
-  timeout: 300
+  timeout: 600
   default_model: "hf.co/RefalMachine/RuadaptQwen2.5-32B-Pro-Beta-GGUF:Q8_0"
 
 openapi:
@@ -30,9 +30,6 @@ openapi:
     - Bearer: []
 
 logging:
-  file_path: "/var/log/ai-server.log"
+  file_path: "/var/log/ai-server_default.log"
   level: "INFO"
   format: "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
-  max_bytes: 10485760
-  backup_count: 5
-  enable_console: true
