--- a/config-default.yaml
+++ b/config-default.yaml
@@ -29,6 +29,19 @@ openapi:
   security:
     - Bearer: []
 
+image_generation:
+  default_model: "black-forest-labs/FLUX.1-dev"
+  default_size: "512x512"
+  default_steps: 50
+  default_guidance_scale: 4.5
+  default_language: "auto"
+
+prompt_generation:
+  temperature: 0.7
+  top_p: 0.9
+  max_tokens: 300
+  system_message: "Сейчас ты помогаешь создавать промпты для генерации изображений."
+
 logging:
   file_path: "/var/log/ai-server_default.log"
   level: "INFO"
