--- a/config-default.yaml
+++ b/config-default.yaml
@@ -37,7 +37,7 @@ chat:
     default_language: "auto"
 
   image_prompt:
-    default_model: "hf.co/RefalMachine/RuadaptQwen2.5-32B-Pro-Beta-GGUF:Q8_0"
+    default_model: "hf.co/RefalMachine/RuadaptQwen2.5-7B-Lite-Beta-GGUF:Q8_0"
     temperature: 0.7
     top_p: 0.9
     max_tokens: 300
