--- a/config-docker.yaml
+++ b/config-docker.yaml
@@ -54,12 +54,13 @@ chat:
   image_generation:
     default_model: "black-forest-labs/FLUX.1-dev"
     default_size: "512x512"
-    default_steps: 25
+    default_steps: 35
     default_guidance_scale: 4.5
     default_language: "auto"
 
   image_prompt:
-    default_model: "hf.co/RefalMachine/RuadaptQwen2.5-14B-instruct-GGUF:Q8_0"
+    default_model: "hf.co/RefalMachine/RuadaptQwen2.5-7B-Lite-Beta-GGUF:Q8_0"
+#    default_model: "hf.co/RefalMachine/RuadaptQwen2.5-14B-instruct-GGUF:Q8_0"
 #    default_model: "hf.co/RefalMachine/RuadaptQwen2.5-32B-Pro-Beta-GGUF:Q8_0"
     temperature: 0.7
     top_p: 0.9
