--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,9 @@ fastapi>=0.115.0
 uvicorn>=0.34.0
 python-multipart>=0.0.20
 requests>=2.32.0
-torch>=2.6.0
+torch>=2.7.0
 diffusers>=0.32.0
-transformers==4.47.1
+transformers>=4.51.0
 accelerate>=1.5.0
 googletrans>=4.0.0
 python-dotenv>=0.19.0
@@ -18,5 +18,3 @@ nltk>=3.9.0
 joblib>=1.4.0
 huggingface_hub>=0.27.0
 pillow>=10.3.0
-accelerate>=0.30.0
-bitsandbytes>=0.43.0
