--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ python-multipart>=0.0.20
 requests>=2.32.0
 torch>=2.7.0
 diffusers>=0.32.0
-transformers>=4.51.0
+transformers==4.48.3
 accelerate>=1.5.0
 googletrans>=4.0.0
 python-dotenv>=0.19.0
